# Rundell-lang

./: .gitattributes  .gitignore  README.md  package-lock.json
Design/: RUNDELL_AGENT_INSTRUCTIONS.md  Rundell_Language_Specification_v0.2.docx
rundell/: .gitignore  Cargo.toml  NOTICE  README.md  toLive.ps1
rundell/crates/rundell-cli/: Cargo.toml
rundell/crates/rundell-cli/src/: main.rs
rundell/crates/rundell-compiler/: Cargo.toml
rundell/crates/rundell-compiler/src/: codegen.rs  lib.rs  prelude.rs
rundell/crates/rundell-env/: Cargo.toml
rundell/crates/rundell-env/src/: crypto.rs  lib.rs  store.rs
rundell/crates/rundell-gui/: Cargo.toml
rundell/crates/rundell-gui/src/: app.rs  dialogs.rs  form_runtime.rs  lib.rs  main.rs
rundell/crates/rundell-gui/src/controls/: button.rs  checkbox.rs  label.rs  listbox.rs  mod.rs  radiobutton.rs  select.rs  switch.rs  textbox.rs
rundell/crates/rundell-gui/src/designer/: canvas.rs  codegen.rs  inspector.rs  mod.rs
rundell/crates/rundell-interpreter/: Cargo.toml
rundell/crates/rundell-interpreter/src/: environment.rs  error.rs  evaluator.rs  form_registry.rs  gui_channel.rs  lib.rs
rundell/crates/rundell-lexer/: Cargo.toml
rundell/crates/rundell-lexer/src/: lib.rs  token.rs
rundell/crates/rundell-parser/: Cargo.toml
rundell/crates/rundell-parser/src/: ast.rs  error_format.rs  lib.rs  parser.rs
rundell/docs/: LANGUAGE_REFERENCE.md  TUTORIAL.md  agent_instructions.txt
rundell/examples/: builtins.run  calculator.run  contact_book.run  datetime_basics.run  debug.run  error_handling_demo.run  execute_basics.run  execute_cross_platform.run  fibonacci.run  file_io_csv.run  file_io_text_json.run  fizzbuzz.run  grade_calculator.run  gui_calculator.run  gui_clock.run  gui_contact_book.run  gui_data.run  gui_dialogs.run  gui_hello.run  gui_rest_browser.run  gui_temperature.run  gui_timer.run  hello_world.run  rest_authenticated_api.run  rest_dog_api.run  rest_error_handling.run  string_utils.run  temperature_converter.run  timer_basic.run
rundell/tests/: 01_variables.run  02_arithmetic.run  03_strings.run  04_boolean.run  05_casting.run  06_conditionals.run  07_loops.run  08_functions.run  09_collections.run  10_error_handling.run  12_builtins.run
rundell/tests/11_modules/: helper.run  main.run
