[package]
name    = "rundell-cli"
version = "0.1.6"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "rundell"
path = "src/main.rs"

[dependencies]
rundell-interpreter = { path = "../rundell-interpreter" }
rundell-parser      = { path = "../rundell-parser"      }
rundell-lexer       = { path = "../rundell-lexer"       }
rundell-env         = { path = "../rundell-env"         }
rundell-gui         = { path = "../rundell-gui"         }
rundell-compiler    = { path = "../rundell-compiler"    }
rustyline           = "14"
miette              = { version = "7", features = ["fancy"] }
clap                = { version = "4", features = ["derive"] }
