[package]
name    = "rundell-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rundell-gui"
path = "src/main.rs"

[dependencies]
rundell-interpreter = { path = "../rundell-interpreter" }
rundell-parser      = { path = "../rundell-parser" }
rundell-lexer       = { path = "../rundell-lexer" }
eframe              = { version = "0.27", features = ["default"] }
egui                = "0.27"
egui_extras         = { version = "0.27", features = ["image"] }
rfd                 = "0.14"
image               = "0.25"
base64              = "0.22"
serde_json          = "1.0"
thiserror           = "1"
clap                = { version = "4", features = ["derive"] }
