[package]
name    = "rundell-interpreter"
version = "0.1.1"
edition = "2021"

[dependencies]
rundell-parser = { path = "../rundell-parser" }
rundell-lexer  = { path = "../rundell-lexer"  }
rundell-env    = { path = "../rundell-env"    }
thiserror      = "1"
serde_json     = "1"
serde          = { version = "1", features = ["derive"] }
tokio          = { version = "1", features = ["full"] }
reqwest        = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
