[package]
name    = "rundell-interpreter"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
rundell-parser = { path = "../rundell-parser" }
rundell-lexer  = { path = "../rundell-lexer"  }
rundell-env    = { path = "../rundell-env"    }
thiserror      = "1"
serde_json     = "1"
serde          = { version = "1", features = ["derive"] }
csv            = "1"
tokio          = { version = "1", features = ["full"] }
reqwest        = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono         = { version = "0.4", features = ["clock"] }
